imported needed modules and extracted data from iris.csv and stored in variables as matrices

--- a/ML4CC.ipynb
+++ b/ML4CC.ipynb
@@ -6,15 +6,63 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n",
-    "\n",
-    "# Check if CUDA is available\n",
-    "if torch.cuda.is_available():\n",
-    "    # Get the device name\n",
-    "    device = torch.cuda.get_device_name(0)\n",
-    "    print(\"PyTorch is using GPU:\", device)\n",
-    "else:\n",
-    "    print(\"PyTorch is using CPU\")\n"
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "from numpy import genfromtxt\n",
+    "from sklearn import svm\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.preprocessing import LabelEncoder, StandardScaler\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import (accuracy_score, confusion_matrix, f1_score,\n",
+    "precision_score, recall_score)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### EXTRACTING DATA FROM CSV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Extracting the features columns from the Iris.csv file to be store in a matrix held by the variable features\n",
+    "features = genfromtxt ('Iris.csv', delimiter=',', usecols=(i for i in range(0,4)), dtype = float, skip_header=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Extracting the labeled class from the Iris.csv data set to be stored in the variable name class_Value\n",
+    "class_Value = genfromtxt('Iris.csv', delimiter=',', usecols=(-1), dtype = str ,skip_header=1,)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Changing the labels from a string type to numbers that can be used to compute with\n",
+    "labels = LabelEncoder ().fit_transform(class_Value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#print(features)\n",
+    "#print(class_Value)\n",
+    "#print(labels)"
    ]
   }
  ],
@@ -25,7 +73,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.8.16"
   }
  },
